  Al dot Smith at aeschi dot ch dot eu dot org)
- Fixed bug #48057 (Only the date fields of the first row are fetched,
  others are empty). (info at programmiernutte dot net)
- Fixed bug #47481 (natcasesort() does not sort extended ASCII characters
  correctly). (Herman Radtke)
- Fixed bug #47351 (Memory leak in DateTime). (Derick, Tobias John)
- Fixed bug #46682 (touch() afield returns different values on windows).
  (Pierre)
- Fixed bug #45905 (imagefilledrectangle() clipping error).
  (markril at hotmail dot com, Pierre)
- Fixed bug #45141 (setcookie will output expires years of >4 digits). (Ilia)
- Fixed bug #46020 (with Sun Java System Web Server 7.0 on HPUX, #define HPUX).
  (Uwe Schindler)
- Fixed bug #45554 (Inconsistent behavior of the u format char). (Derick)
- Fixed bug #43510 (stream_get_meta_data() does not return same mode as used
  in fopen). (Jani)
- Fixed bug #42434 (ImageLine w/ antialias = 1px shorter). (wojjie at gmail dot
  com, Kalle)
- Fixed bug #38091 (Mail() does not use FQDN when sending SMTP helo). 
  (Kalle, Rick Yorgason)
- Fixed bug #28038  (Sent incorrect RCPT TO commands to SMTP server) (Garrett)

30 Jun 2009, PHP 5.3.0
- Upgraded bundled PCRE to version 7.9. (Nuno)
- Upgraded bundled sqlite to version 3.6.15. (Scott)

- Moved extensions to PECL (Derick, Lukas, Pierre, Scott):
  . ext/dbase
  . ext/fbsql
  . ext/fdf
  . ext/ncurses
  . ext/mhash (BC layer is now entirely within ext/hash)
  . ext/ming
  . ext/msql
  . ext/sybase (not maintained anymore, sybase_ct has to be used instead)

- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)
- Removed zend.ze1_compatibility_mode. (Dmitry)
- Removed all zend_extension_* php.ini directives. Zend extensions are now
  always loaded using zend_extension directive. (Derick)
- Removed special treatment of "/tmp" in sessions for open_basedir.
  Note: This undocumented behaviour was introduced in 5.2.2. (Alexey)